--- a/zad2/zegarek.html
+++ b/zad2/zegarek.html
@@ -3,6 +3,7 @@
     <head>
         <title>Zegar</title>
         <meta charset="utf-8">
+        <link rel="icon" href="haribo.png" type="image/png">
         <link rel="stylesheet" href="ZegarStyl.css" type="text/css">
     </head>
     <body>
