--- a/egzamin 3/index.html
+++ b/egzamin 3/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <title>Firma IT</title>
         <link rel="stylesheet" href="styl.css" type="text/css">
-        <link rel="logo" href="logo.png" type="imagine/png">
+        <link rel="logo" href="logo1.png" type="imagine/png">
     </head>
     <body>
         <div id="main">
-            <div id="logo"><img src="logo.png"></div>
+            <div id="logo"><img src="logo1.png"></div>
             <div id="menu">
                 <a href="index.html">Strona głowna</a>
                 <a href="uslugi.html">Usługi</a>
