--- a/egzamin 3/kontakt.html
+++ b/egzamin 3/kontakt.html
@@ -9,6 +9,10 @@
     <body>
 
       <script>
+        function Resetuj()
+        {
+          document.getElementById("tabela").reset();
+        }
       
         function Wyslij()
         {
